# Honeyd

./: .gitignore  ChangeLog  Makefile.am  README  acconfig.h  analyze.c  arp.c  arp.h  atomicio.c  command.c  condition.c  condition.h  config.c  config.ethernet  config.sample  configure  configure.in  daemon.c  dhcpclient.c  dhcpclient.h  err.c  err.txt  errx.txt  ethernet.c  ethernet.h  fdpass.c  fdpass.h  filter.c  filter.h  generateDebs  getopt_long.c  gre.c  gre.h  histogram.c  histogram.h  honeyd.8  honeyd.c  honeyd.h  honeyd_overload.c  honeydctl.1  (+68 more)
autom4te.cache/: traces.0  traces.1
compat/: sha1.h
debian/: README.Debian  TODO  changelog  config.localhost  control  copyright  honeyd-common.dirs  honeyd-common.doc-base  honeyd.default  honeyd.dirs  honeyd.init  honeyd.logrotate  honeyd.postinst  honeyd.postrm  honeyd.prerm  rules
doc/: challenge.html  contrib.html  faq.html  honeyd.gif.uu  index.html  msblast.html
dpkt/: AUTHORS  Makefile  README  setup.py
dpkt/dpkt/: ah.py  cdp.py  dpkt.py  dtp.py  esp.py  ethernet.py  gre.py  http.py  ip6.py  ipx.py  loopback.py  netbios.py  netflow.py  ospf.py  pcap.py  smb.py  stp.py  stun.py  tcp.py  tftp.py  vrrp.py
dpkt/tests/: test-perf2.py
honeyd/: .cproject  .cvsignore  .project  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  analyze.c  analyze.h  arp.c  arp.h  atomicio.lo  command.c  condition.c  condition.h  config.c  config.h  config.h.in  config.sample  config.status  configure  configure.in  debug.h  dhcpclient.c  dhcpclient.h  distribute.py  ethernet.c  ethernet.h  fdpass.c  fdpass.lo  filter.c  filter.h  generate_assoc.py  gre.c  gre.h  histogram.c  histogram.h  honeyd  (+80 more)
honeyd/autom4te.cache/: output.0  output.1  requests  traces.1
honeyd/compat/libdnet/: dnet.h
honeyd/dpkt/: CHANGES
honeyd/dpkt/dpkt/: __init__.py  aim.py  arp.py  asn1.py  dhcp.py  dns.py  hsrp.py  icmp.py  icmp6.py  igmp.py  ip.py  pim.py  ppp.py  rpc.py  telnet.py  tns.py  udp.py  yahoo.py
honeyd/pypcap/: CHANGES  Makefile  Makefile.in  README  pcap_ex.h  setup.py  test.py
honeyd/regress/: .cvsignore  Makefile  Makefile.am  Makefile.in  config.1  detect.output.1  detect.output.2  detect.output.4  detect.py  gen.output.1  gen.output.2  general.py  regress.py  route.output.1  routing.py
honeyd/scripts/: README.cmdexe  README.mydoom  mydoom.pl  proxy.py  router-telnet.pl  test.sh  web.sh  webserver.py  www.py
honeyd/scripts/backdoors/: kuang2.pl  web.sh
honeyd/scripts/embedded/snmp/: linux-2.4.snmp.tpl
honeyd/scripts/linux/: cyrus-imapd.sh  echo.sh  fingerd.sh  ftp.sh  ident.sh  lpd.sh  qpop.sh  sendmail.sh  smtp.pl  squid.sh  ssh.sh  syslogd.sh  telnetd.sh
honeyd/scripts/linux/httpd/: httpd.tcl
honeyd/scripts/linux/httpd/responses/apache/: 200_options.header  400  404.header  404.html  501  index.html
honeyd/scripts/misc/: base.sh  proxy.pl
honeyd/scripts/misc/honeydsum-v0.3/: CHANGELOG
honeyd/scripts/misc/telnet/: msgs.txt
honeyd/scripts/snmp/: fake-snmp.pl
honeyd/scripts/strings/: cyrus-imapd.sh  example.conf  fingerd.strings  httpd.strings  ident.strings  qpop.strings  squid.strings  telnetd.strings
honeyd/scripts/unix/general/: smtp.sh
honeyd/scripts/unix/general/pop/: pop3.sh
honeyd/scripts/unix/general/rpc/: bportmapd
honeyd/scripts/unix/general/snmp/: .snmp  192.168.1.130.snmp  192.168.1.135.snmp  192.168.1.140.snmp  README  buildSNMPConfig.pl  fake-snmp.pl  windows2000.snmp.tpl
honeyd/scripts/win32/: web.sh
honeyd/scripts/win32/win2k/: exchange-imap.sh  exchange-nntp.sh  exchange-pop3.sh  exchange-smtp.sh  iis.sh  ldap.sh  msftp.sh  vnc.sh
honeyd/scripts/win32/win2k/dat/: msftp.files
honeyd/subsystems/: proxy.c  proxy.h  proxy_main.c  proxy_messages.h  smtp.c  smtp.h  smtp_main.c  smtp_messages.h
honeyd/webserver/: support.py
honeyd/webserver/htdocs/: index.py
honeyd/webserver/htdocs/styles/: layout.css
honeyd/webserver/htdocs/templates/inc/: footer.tmpl
os-test/: ostest
pypcap/: LICENSE  Makefile.am  config.h  config.pkl  pcap.c  pcap.pyx  pcap_ex.c  setup.py  test.pcap  testsniff.py
regress/: IMPORTANT_NOTES.txt  config.1  config.2  detect.output.3  nmap.py  regress.py
sample-config/: honeyd.conf.bloat  honeyd.conf.networks  wireless
scripts/: names
scripts/WIP/: find_print_res.py  ipp.py  ipp_tcp_wrap.py  ipp_udp_wrap.py  ipp_wrap.py  lpd.py  snmprequest.py  snmpscrape.py  test.192.168.10.12.txt
scripts/WIP/DNS/: dns.py  dns_build.py  dns_req.py  ns_resolve.c
scripts/WIP/IPP/: ipp.py  ipp_udp_wrap.py  snmprequest.py  snmpscrape.py
scripts/WIP/NBSSN/: netbios_ssn.py
scripts/backdoors/: INSTALL.kuang2  README.cmdexe  README.kuang2  README.mydoom  cmdexe.pl  kuang2.conf
scripts/broadcasts/: nbns-wpad-query.py
scripts/embedded/snmp/: default.snmp
scripts/lib/: init.py  names.py
scripts/linux/: cyrus-imapd.sh  echo.sh  fingerd.sh  ftp.sh  ident.sh  lpd.sh  mysql.py  sendmail.sh  squid.sh  ssh.sh  telnetd.sh
scripts/linux/dat/: wuftpd.files
scripts/linux/httpd/: httpd.tcl
scripts/linux/httpd/responses/apache/: 200_index.header
scripts/linux/httpd/responses/netboot/: 200_index.header  401.header  404.header
scripts/linux/mdns/: dns.py  mdns.py
scripts/misc/: smb-autofail.py  smb.py
scripts/misc/honeydsum-v0.3/: README  honeydsum.conf  honeydsum.pl
scripts/misc/telnet/: cmds.txt
scripts/strings/: ftpd.strings  httpd.strings  sendmail.strings  ssh.strings
scripts/unix/general/pop/: emulate-pop3.sh
scripts/unix/general/rpc/hosts/: openbsd-2.8
scripts/unix/general/snmp/: 192.168.1.140.snmp
scripts/unix/general/telnet/: faketelnet.pl
scripts/win32/: mssql.py  nbns.py  web.sh
scripts/win32/win2k/: exchange-imap.sh  exchange-nntp.sh  exchange-smtp.sh  ldap.sh
subsystems/: proxy.c  proxy.h  proxy_main.c  smtp.c  smtp.h  smtp_main.c
webserver/: server.py  support.py
webserver/htdocs/: config.py  index.py
webserver/htdocs/templates/: config_ip.tmpl  index.tmpl  status_connections.tmpl  status_stats.tmpl
webserver/htdocs/templates/inc/: header.tmpl  main.tmpl  nav.tmpl
(+8 files in other folders)
